Binder stup sixth commit

--- a/13-04-NearRealTime-product-managing-files-profilers.ipynb
+++ b/13-04-NearRealTime-product-managing-files-profilers.ipynb
@@ -189,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IPython.display.IFrame('http://localhost:8888/tree/data/files/PF', width='100%', height=350)"
+    "IPython.display.IFrame('data/files/PF', width='100%', height=350)"
    ]
   },
   {
