--- a/13-02-NearRealTtime-product-subsetting-download.ipynb
+++ b/13-02-NearRealTtime-product-subsetting-download.ipynb
@@ -513,7 +513,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IPython.display.IFrame('http://localhost:8888/', width='100%', height=350)"
+    "IPython.display.IFrame('data/index_files', width='100%', height=350)"
    ]
   },
   {
