Binder stup eigth commit

--- a/13-01-NearRealTtime-product-collections-overview.ipynb
+++ b/13-01-NearRealTtime-product-collections-overview.ipynb
@@ -744,7 +744,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b style=\"margin-right: 2em\">CHALLENGE</b> Do you find in there the feature types of <a href=\"#platform_selected\">the platform</a> we were looking at in the platform section?\n",
+    "<b style=\"margin-right: 2em\">CHALLENGE</b> Do you find in there the source types of <a href=\"#platform_selected\">the platform</a> we were looking at in the platform section?\n",
     "    \n",
     "*** \n",
     "In the end the platform we are checking is a:\n",
