--- a/13-02-NearRealTtime-product-subsetting-download.ipynb
+++ b/13-02-NearRealTtime-product-subsetting-download.ipynb
@@ -1320,8 +1320,8 @@
    "outputs": [],
    "source": [
     "targeted_collection = 'history'\n",
-    "targeted_range = '2019-01-01T00:00:00Z/2019-12-01T23:59:59Z'\n",
-    "targeted_data_type = 'TS'\n",
+    "targeted_range = '2006-01-01T00:00:00Z/2020-04-01T23:59:59Z'\n",
+    "targeted_data_type = 'TG'\n",
     "targeted_geospatial_lat_min = 40.0  # enter min latitude of your bounding box\n",
     "targeted_geospatial_lat_max = 48.0  # enter max latitude of your bounding box\n",
     "targeted_geospatial_lon_min = 28.0  # enter min longitude of your bounding box\n",
@@ -1467,7 +1467,7 @@
     "\n",
     "_Click on one of the hyperlinks below to continue the training_\n",
     "<br>\n",
-    "[**13-03-NearRealTime-product-managing-files-moorings.ipynb**](13-03-NearRealTime-product-managing-files-moorings.ipynb)<br>\n",
+    "[**13-03-NearRealTime-product-managing-files-tideGauges.ipynb**](13-03-NearRealTime-product-managing-files-tideGauges.ipynb)<br>\n",
     "[**13-04-NearRealTime-product-managing-files-profilers.ipynb**](13-04-NearRealTime-product-managing-files-profilers.ipynb)<br>\n",
     "[**13-05-NearRealTime-product-managing-files-thermosal.ipynb**](13-05-NearRealTime-product-managing-files-thermosal.ipynb)<br>"
    ]
