--- a/13-03-NearRealTime-product-managing-files-tideGauges.ipynb
+++ b/13-03-NearRealTime-product-managing-files-tideGauges.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# BS `NRT` product/dataset: managing files (Moorings)"
+    "# BS `NRT` product/dataset: managing files (Tide Gauges)"
    ]
   },
   {
@@ -44,7 +44,7 @@
     "                <li><span><a href=\"#Python-packages\" data-toc-modified-id=\"Python-packages\">Python packages</a></span></li>\n",
     "            </ul>\n",
     "        </li>\n",
-    "        <li><span><a href=\"#Moorings-(MO)-data\" data-toc-modified-id=\"Moorings-(MO)-data\">Moorings (MO) data</a></span>\n",
+    "        <li><span><a href=\"#Tide-Gauges-(TG)-data\" data-toc-modified-id=\"Tide-Gauges-(TG)-data\">Tide Gauges (TG) data</a></span>\n",
     "            <ul>\n",
     "                <li><span><a href=\"#Reading-file\" data-toc-modified-id=\"Reading-file\">Reading file</a></span></li>\n",
     "                <li><span><a href=\"#Subsetting-Operations\" data-toc-modified-id=\"Subsetting-Operations\">Subsetting Operations</a></span>\n",
@@ -76,7 +76,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "According to the [13-01-NearRealTtime-product-collections-overview.ipynb](13-01-NearRealTtime-product-collections-overview.ipynb) one of the two most common data source types available are the Moorings, Profilers, Tide Gauges and Drifters. Please use the notebook [13-02-NearRealTtime-product-subsetting-download](13-02-NearRealTtime-product-subsetting-download.ipynb) to download some files from Moorings ('MO' data type) and let's check its data. If you wanna skip the downloading part you can use the netCDF files available <a href=\"data\" target=\"_blank\">here</a> instead.  "
+    "According to the [13-01-NearRealTtime-product-collections-overview.ipynb](13-01-NearRealTtime-product-collections-overview.ipynb) one of the data source types available are Tide Gauges. Please use the notebook [13-02-NearRealTtime-product-subsetting-download](13-02-NearRealTtime-product-subsetting-download.ipynb) to download some files from Tide Gauge ('TG' data type) and let's check its data. If you wanna skip the downloading part you can use the netCDF files available <a href=\"data\" target=\"_blank\">here</a> instead.  "
    ]
   },
   {
@@ -141,15 +141,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mooring (MO) data"
+    "## Tide Gauges (TG) data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Moorings are fixed platforms (i.e ocenographic buoys) measuring a number of oceanographic variables over time.<br>\n",
-    "Let's see the data of one of the available moorings in the BS. "
+    "Tide Gauges are fixed platforms measuring Sea Level over time plus, potentially, some other oceanographic variables.<br>\n",
+    "Let's see the data of one of the available Tide Gauges in the BS. "
    ]
   },
   {
@@ -172,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IPython.display.IFrame('data/files/MO', width='100%', height=350)"
+    "IPython.display.IFrame('data/files/TG', width='100%', height=350)"
    ]
   },
   {
@@ -188,8 +188,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = 'BS_TS_MO_EUXRo03.nc'\n",
-    "path = os.path.join(os.getcwd(), 'data','files','MO', file)"
+    "file = 'BS_TS_TG_Varna.nc'\n",
+    "path = os.path.join(os.getcwd(), 'data','files','TG', file)"
    ]
   },
   {
@@ -269,8 +269,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "param = 'TEMP'\n",
-    "ds[param][:,2]"
+    "param = 'SLEV'\n",
+    "ds[param]"
    ]
   },
   {
@@ -286,7 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds[param][:,2].plot(aspect=2, size=10, color='k', marker='o')"
+    "ds[param].plot(aspect=2, size=10, color='k', marker='o')"
    ]
   },
   {
@@ -319,7 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subset = ds[param][:,2].sel(TIME=slice(start, end))\n",
+    "subset = ds[param].sel(TIME=slice(start, end))\n",
     "subset.plot(aspect=2, size=10, color='k', marker='o')"
    ]
   },
@@ -348,7 +348,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Is it there any bad data in the above time serie? `Run the next cell`to check the quality flags assigned to the parameter:"
+    "Is it there any bad data in the above time serie? `Run the next cells`to check the quality flags assigned to the parameter:"
    ]
   },
   {
@@ -357,8 +357,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subset_QC = ds[param+'_QC'][:,2].sel(TIME=slice(start, end))\n",
+    "subset_QC = ds[param+'_QC'].sel(TIME=slice(start, end))\n",
     "subset_QC.plot(aspect=2, size=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set(subset_QC[:,0].values.tolist())"
    ]
   },
   {
@@ -375,8 +384,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(data=ds[param+'_QC'][:,2].attrs['flag_values'],\n",
-    "             index=ds[param+'_QC'][:,2].attrs['flag_meanings'].split(' '), \n",
+    "pd.DataFrame(data=ds[param+'_QC'].attrs['flag_values'],\n",
+    "             index=ds[param+'_QC'].attrs['flag_meanings'].split(' '), \n",
     "             columns=['quality flag'])"
    ]
   },
@@ -409,7 +418,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subset_good.plot(aspect=2, size=10, color='k', marker='o')"
+    "subset.plot(aspect=2, size=10, color='r', marker='o') #original serie\n",
+    "subset_good.plot(color='k', marker='o') #clean serie in black"
    ]
   },
   {
@@ -447,7 +457,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's see next a upsampling example; this is, retrieveing more observations in a given period by inferring new ones some-how i.e <i>interpolating the original number of observations</i>. Let's get, by interpolating, a 10 minute resolution instead:"
+    "Let's see next a upsampling example; this is, retrieveing more observations in a given period by inferring new ones some-how i.e <i>interpolating the original number of observations</i>. Let's get, by interpolating, a 0.5 minute resolution instead:"
    ]
   },
   {
@@ -456,7 +466,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(subset_good.resample(TIME='10Min').interpolate('linear')).plot(aspect=2, size=10, color='k', marker='o')"
+    "(subset_good.resample(TIME='0.5Min').interpolate('linear')).plot(aspect=2, size=10, color='k', marker='o')"
    ]
   },
   {
@@ -486,7 +496,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframe = subset_good.to_dataframe()\n",
+    "dataframe = subset_good[:,0].to_dataframe()\n",
     "dataframe"
    ]
   },
@@ -539,7 +549,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_with_readable_time.to_excel(os.path.join(out_put_dir, file_name))"
+    "dataframe.to_excel(os.path.join(out_put_dir, file_name))"
    ]
   },
   {
