--- a/13-04-NearRealTime-product-managing-files-profilers.ipynb
+++ b/13-04-NearRealTime-product-managing-files-profilers.ipynb
@@ -76,7 +76,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "According to the [13-01-NearRealTtime-product-collections-overview.ipynb](13-01-NearRealTtime-product-collections-overview.ipynb) one of the most common data source types available are the Moorings, Profilers, Tide Gauges and Drifters. Please use the notebook [13-02-NearRealTtime-product-subsetting-download](13-02-NearRealTtime-product-subsetting-download.ipynb) to download some files from Profilers ('PF' data type) and let's check its data. If you wanna skip the downloading part you can use the netCDF files available <a href=\"data\" target=\"_blank\">here</a> instead.  "
+    "According to the [13-01-NearRealTtime-product-collections-overview.ipynb](13-01-NearRealTtime-product-collections-overview.ipynb) one of the data source types available are Profilers. Please use the notebook [13-02-NearRealTtime-product-subsetting-download](13-02-NearRealTtime-product-subsetting-download.ipynb) to download some files from Profilers ('PF' data type) and let's check its data. If you wanna skip the downloading part you can use the netCDF files available <a href=\"data\" target=\"_blank\">here</a> instead.  "
    ]
   },
   {
@@ -166,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's see the data of one of the available profilers in the IBI Seas."
+    "Let's see the data of one of the available profilers in the Black Sea."
    ]
   },
   {
